--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "redirects": [
     {
-      "source": "/",
-      "destination": "/index.html",
+      "source": "/index.html",
+      "destination": "/",
       "permanent": true
     }
   ]
